add create item, get item tests
